--- a/src/components/searchBox/styles.scss
+++ b/src/components/searchBox/styles.scss
@@ -2,15 +2,56 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
   margin: 20px;
   &__wrapper {
     max-width: 50%;
     min-width: 30%;
+    width: 100%;
     @media screen and (max-width: 800px) {
       max-width: none;
       min-width: 30%;
       margin: 5px;
     }
   }
+
+  &__button {
+    width: 100px;
+    min-width: 50px;
+    height: 30px;
+    display: inline-block;
+    padding: 5px 5px;
+    margin: 8px 8px;
+    text-decoration: none;
+    outline: none;
+    font-weight: 300;
+    transition: all 0.2s;
+    background-color: #4eb5f1;
+    color: #ffffff;
+    border-radius: 10px;
+    border: none;
+    box-sizing: border-box;
+    @media all and (max-width: 500px) {
+      width: 70px;
+    }
+
+    &:hover {
+      background-color: #4095c6;
+    }
+  }
+}
+
+input {
+  height: 30px;
+  max-width: 50%;
+  min-width: 40%;
+  padding: 3px 8px;
+  margin: 8px 8px;
+  outline: none;
+  border-radius: 10px;
+  border: 1px solid #eee;
+  transition: 0.3s border-color;
+}
+
+input:hover {
+  border: 1px solid #aaa;
 }
