--- a/src/components/animeCard/styles.scss
+++ b/src/components/animeCard/styles.scss
@@ -4,7 +4,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 250px;
-  height: 350px;
+  min-height: 350px;
   margin: 20px;
   background-color: #eeeeee;
   border-radius: 5px;
@@ -24,9 +24,6 @@
   &__title {
     padding: 1rem;
     text-align: center;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
   }
 }
 
