--- a/src/components/animeCardsList/styles.scss
+++ b/src/components/animeCardsList/styles.scss
@@ -3,4 +3,10 @@
   justify-content: center;
   min-height: 400px;
   flex-wrap: wrap;
+  &_wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
