--- a/src/components/animeCard/styles.scss
+++ b/src/components/animeCard/styles.scss
@@ -6,9 +6,8 @@
   width: 250px;
   min-height: 350px;
   margin: 20px;
-  background-color: #eeeeee;
+  background-color: white;
   border-radius: 5px;
-  padding: 0.5rem;
 
   &__image {
     display: flex;
