--- a/src/components/searchBox/styles.scss
+++ b/src/components/searchBox/styles.scss
@@ -17,19 +17,22 @@
   &__button {
     width: 100px;
     min-width: 50px;
-    height: 30px;
+    height: 40px;
     display: inline-block;
-    padding: 5px 5px;
-    margin: 8px 8px;
     text-decoration: none;
     outline: none;
     font-weight: 300;
+    padding: 0;
+    margin: 0;
     transition: all 0.2s;
-    background-color: #4eb5f1;
-    color: #ffffff;
-    border-radius: 5px;
+    background-color: #1c7ac2;
+    color: whitesmoke;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     border: none;
     box-sizing: border-box;
+    border: 1px solid white;
+    border-left: 0;
     @media all and (max-width: 500px) {
       width: 70px;
     }
@@ -38,20 +41,24 @@
       background-color: #4095c6;
     }
   }
-}
 
-input {
-  height: 30px;
-  max-width: 50%;
-  min-width: 40%;
-  padding: 3px 8px;
-  margin: 8px 8px;
-  outline: none;
-  border-radius: 10px;
-  border: 1px solid #eee;
-  transition: 0.3s border-color;
-}
+  input {
+    height: 40px;
+    max-width: 50%;
+    min-width: 40%;
+    padding: 3px 8px;
+    outline: none;
+    border: 1px solid white;
+    transition: 0.3s border-color;
+    color: whitesmoke;
+    box-sizing: border-box;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: #1c7ac2;
+    border-right: 0;
+  }
 
-input:hover {
-  border: 1px solid #aaa;
+  input::placeholder {
+    color: whitesmoke;
+  }
 }
