--- a/src/components/animeCard/styles.scss
+++ b/src/components/animeCard/styles.scss
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
     img {
       height: 300px;
       width: 250px;
@@ -22,6 +23,7 @@
 
   &__title {
     padding: 1rem;
+    font-weight: 700;
     text-align: center;
   }
 }
