--- a/src/components/loadMoreButton/styles.scss
+++ b/src/components/loadMoreButton/styles.scss
@@ -4,27 +4,23 @@
   align-items: center;
 
   button {
-    width: 100px;
-    min-width: 50px;
-    height: 30px;
+    width: 120px;
+    height: auto;
     display: inline-block;
-    padding: 5px 5px;
-    margin: 8px 8px;
+    padding: 0.7rem;
+    margin: 8px;
     text-decoration: none;
     outline: none;
-    font-weight: 300;
     transition: all 0.2s;
-    background-color: #4eb5f1;
-    color: #ffffff;
+    background-color: white;
+    color: var(--primary-color);
+    font-weight: 700;
     border-radius: 5px;
     border: none;
     box-sizing: border-box;
 
-    @media all and (max-width: 500px) {
-      width: 70px;
-    }
     &:hover {
-      background-color: #4095c6;
+      opacity: 0.7;
     }
   }
 }
