--- a/src/components/searchBox/styles.scss
+++ b/src/components/searchBox/styles.scss
@@ -2,11 +2,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 20px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  padding: 1rem 0;
+  background-color: var(--primary-color);
+  height: 80px;
+
   &__wrapper {
-    max-width: 50%;
+    max-width: 500px;
     min-width: 30%;
     width: 100%;
+
     @media screen and (max-width: 800px) {
       max-width: none;
       min-width: 30%;
@@ -17,7 +25,7 @@
   &__button {
     width: 100px;
     min-width: 50px;
-    height: 40px;
+    height: 60px;
     display: inline-block;
     text-decoration: none;
     outline: none;
@@ -25,7 +33,7 @@
     padding: 0;
     margin: 0;
     transition: all 0.2s;
-    background-color: #1c7ac2;
+    background-color: var(--primary-color);
     color: whitesmoke;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -33,6 +41,7 @@
     box-sizing: border-box;
     border: 1px solid white;
     border-left: 0;
+
     @media all and (max-width: 500px) {
       width: 70px;
     }
@@ -43,8 +52,9 @@
   }
 
   input {
-    height: 40px;
-    max-width: 50%;
+    height: 60px;
+    width: 60vw;
+    max-width: 400px;
     min-width: 40%;
     padding: 3px 8px;
     outline: none;
@@ -54,7 +64,7 @@
     box-sizing: border-box;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    background-color: #1c7ac2;
+    background-color: var(--primary-color);
     border-right: 0;
   }
 
