--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+:root {
+  --primary-color: #1c7ac2;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,7 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #1c7ac2;
+  background-color: var(--primary-color);
 }
 
 code {
